--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://idontknow/todo.git"
+		"url": "https://github.com/sethayotte/node-fcc.git"
 	}
 }
